--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ __pycache__/
 # C extensions
 *.so
 
+sample_data/dataset_sample_RS_ONLY.*
+sample_data/merged_sample_data.*
+
 # Distribution / packaging
 .Python
 build/
