updated README and we just need to get the damn R script to run

--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,45 @@ venv.bak/
 .mypy_cache/
 
 /.pversion
+/sample_data/dataset_sample_RS_ONLY.log
+/sample_data/dataset_sample_RS_ONLY_exc_missnp_log.fam
+/sample_data/dataset_sample_RS_ONLY.bim
+/sample_data/dataset_sample_PCA.log
+/sample_data/dataset_sample_PCA_PLOT_DATA.eigenvec
+/sample_data/dataset_sample_RS_ONLY.fam
+/sample_data/dataset_sample_PCA.eigenvec
+/sample_data/dataset_sample_RS_ONLY_exc_missnp_log.nosex
+/sample_data/dataset_sample_PCA.nosex
+/sample_data/dataset_sample_RS_ONLY.nosex
+/sample_data/dataset_sample_RS_ONLY_exc_missnp_log.bed
+/sample_data/dataset_sample_RS_ONLY_exc_missnp_log.bim
+/sample_data/dataset_sample_RS_ONLY_exc_missnp_log.log
+/sample_data/dataset_sample_PCA.eigenval
+/sample_data/dataset_sample_RS_ONLY.bed
+/sample_data/merged_sample_data_MAF_EXTRACT.bim
+/sample_data/merged_sample_data_MAF_EXTRACT.nosex
+/sample_data/merged_sample_data_MAF_EXTRACT.bed
+/sample_data/merged_sample_data.bed
+/sample_data/merged_sample_data_MAF_EXTRACT.log
+/sample_data/merged_sample_data_MAF.fam
+/sample_data/hapmap_sample_RS_ONLY_exc_missnp_log.fam
+/sample_data/merged_sample_data_MAF.nosex
+/sample_data/merged_sample_data_MAF.bed
+/sample_data/merged_sample_data.nosex
+/sample_data/hapmap_sample_RS_ONLY_exc_missnp_log.bim
+/sample_data/merged_sample_data_MAF.log
+/sample_data/merged_sample_data_MAF.prune.out
+/sample_data/merged_sample_data_MAF.bim
+/sample_data/hapmap_sample_RS_ONLY_exc_missnp_log.bed
+/sample_data/merged_sample_data_MERGED_LOG_MISSNP.txt
+/sample_data/hapmap_sample_RS_ONLY_exc_missnp_log.log
+/sample_data/hapmap_sample_RS_ONLY.fam
+/sample_data/merged_sample_data.bim
+/sample_data/hapmap_sample_RS_ONLY.bim
+/sample_data/merged_sample_data.log
+/sample_data/hapmap_sample_RS_ONLY.bed
+/sample_data/merged_sample_data_MAF.prune.in
+/sample_data/hapmap_sample_RS_ONLY.log
+/sample_data/merged_sample_data.fam
+/sample_data/merged_sample_data_MAF_EXTRACT.fam
+/Rplots.pdf
